# roast

./: Cargo.toml  README.md
.github/workflows/: ci.yml
roast-core/: Cargo.toml  README.md
roast-core/src/: coordinator.rs  dkg.rs  error.rs  lib.rs  signer.rs  tests.rs
roast-ed25519/: Cargo.toml  README.md
roast-ed25519/src/: lib.rs
roast-ed25519/tests/: integration_tests.rs
roast-ed448/: Cargo.toml  README.md
roast-ed448/src/: lib.rs
roast-ed448/tests/: integration_tests.rs
roast-p256/: Cargo.toml  README.md
roast-p256/src/: lib.rs
roast-p256/tests/: integration_tests.rs
roast-ristretto255/: Cargo.toml  README.md
roast-ristretto255/src/: lib.rs
roast-ristretto255/tests/: integration_tests.rs
roast-secp256k1/: Cargo.toml  README.md
roast-secp256k1/src/: lib.rs
roast-secp256k1/tests/: integration_tests.rs
src/: coordinator.rs  error.rs  lib.rs  participant.rs  signer.rs  verification.rs
tests/: test_basic.rs
