[workspace]
resolver = "2"
members = [
    "roast-core",
]

[workspace.package]
version = "0.1.0"
authors = ["StackOverflowExcept1on"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/StackOverflowExcept1on/roastbeef"
license = "MIT"
categories = ["cryptography"]

[workspace.dependencies]
document-features = "0.2"
frost-core = { git = "https://github.com/ZcashFoundation/frost", branch = "expose-verify-signature-share", features = ["internals"], default-features = false }
rand_core = { version = "0.6", default-features = false }
thiserror-nostd-notrait = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
