[package]
name = "roast-ed25519"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A Schnorr signature scheme over Ed25519 that supports ROAST"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "crypto", "ed25519", "threshold", "signature"]
categories.workspace = true

[dependencies]
document-features.workspace = true
frost-ed25519.workspace = true
roast-core.workspace = true

[features]
default = ["serialization", "cheater-detection", "std"]
#! ## Features
## Enable standard library support.
std = ["roast-core/std"]
## Enable `serde` support for types that need to be communicated. You
## can use `serde` to serialize structs with any encoder that supports
## `serde` (e.g. JSON with `serde_json`).
serde = ["roast-core/serde"]
## Enable a default serialization format. Enables `serde`.
serialization = ["roast-core/serialization"]
## Enable cheater detection.
cheater-detection = ["roast-core/cheater-detection"]
